fix overflow

--- a/src/resources/themes/dashboard-v1/scss/dashboard.scss
+++ b/src/resources/themes/dashboard-v1/scss/dashboard.scss
@@ -3662,6 +3662,10 @@ table.dashboard-table td {
   opacity: 1;
 }
 
+.tooltip-text-short {
+  min-width: 200px !important;
+}
+
 
 //
 .cls-1 {
